--- a/front_app/package.json
+++ b/front_app/package.json
@@ -3,13 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.1.1",
+    "node-sass": "^4.9.0",
     "npm": "^6.0.1",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-favicon": "0.0.14",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
-    "reactstrap": "^6.0.1"
+    "reactstrap": "^6.0.1",
+    "sass": "sass --watch src/styles/scss:src/styles/css",
+    "sass-loader": "^7.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
